# eora-retail-helper-widget

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  rag_chain.py
core/: config.py  exceptions.py  llm_providers.py  rag_chain.py
data/: eora_info.txt
tests/: test_config.py  test_error_handler.py  test_file_loader.py  test_integration.py  test_rag_chain.py  test_validation.py
utils/: error_handler.py  file_loader.py  performance.py  validation.py  web_crawler.py
